--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "type": "module",
   "description": "",
   "main": "main.js",
+  "main2026": "main2026.js",
+
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
