--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -8,31 +8,23 @@ on:
         required: true
         default: 'outreach'
 
+permissions:
+  contents: read
+  actions: write
+
 jobs:
   run-script:
     runs-on: ubuntu-latest
-    environment: .env 
+    environment: production
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: '18.16.0' # match your local Node version
+          node-version: '18.16.0'
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Debug secrets
-        run: |
-          echo "AIRTABLE_API_KEY: ${{ secrets.AIRTABLE_API_KEY && '***SET***' || 'MISSING' }}"
-          echo "AIRTABLE_BASE_ID: ${{ secrets.AIRTABLE_BASE_ID && '***SET***' || 'MISSING' }}"
-          echo "AIRTABLE_TABLE_NAME: ${{ secrets.AIRTABLE_TABLE_NAME && '***SET***' || 'MISSING' }}"
-          echo "GMAIL_USER: ${{ secrets.GMAIL_USER && '***SET***' || 'MISSING' }}"
-          echo "GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD && '***SET***' || 'MISSING' }}"
-
+      - run: npm ci
 
       - name: Run script
         env:
@@ -41,5 +33,5 @@ jobs:
           AIRTABLE_TABLE_NAME: ${{ secrets.AIRTABLE_TABLE_NAME }}
           GMAIL_USER: ${{ secrets.GMAIL_USER }}
           GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
-
         run: node main.js ${{ github.event.inputs.type }}
+
